# pawn-3.2-plus

./: .travis.yml  CMakeLists.txt  changes.md  readme.md
examples/: fib_bench.p  strcmp_test.p  test_strcmp.p  test_strins.p  weekday.p
include/: console.inc  core.inc  file.inc  float.inc  string.inc
source/amx/: CMakeLists.txt  SharedCompileFlags.cmake  amx.c  amx.h  amx_exec.c  amx_internal.h  amx_ptrarray.h  amx_verifier.c  amxargs.c  amxaux.c  amxcons.c  amxcore.c  amxdbg.c  amxdgram.c  amxfile.c  amxprocess.c  amxstring.c  amxtime.c  fixed.c  float.c  osdefs.h  pawndbg.c  pawnrun.c
source/amx/pawnrun/: prun_jit.c
source/cmake/: shared-properties.cmake
source/compiler/: CMakeLists.txt  pawnruns.c  sc.h  sc1.c  sc2.c  sc3.c  sc5.c  scvars.c
source/compiler/hashmap/: hashmap.c
